MFH: - Fixed bug #41815 (Concurrent read/write fails when EOF is reached)