main/streams/plain_wrapper.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: plain_wrapper.c,v 1.52.2.6.2.21 2007/04/18 14:23:06 dmitry Exp $ */
+/* $Id: plain_wrapper.c,v 1.52.2.6.2.22 2007/07/12 11:03:46 jani Exp $ */
 
 #include "php.h"
 #include "php_globals.h"
@@ -329,9 +329,6 @@ static size_t php_stdiop_read(php_stream *stream, char *buf, size_t count TSRMLS
 	assert(data != NULL);
 
 	if (data->fd >= 0) {
-		if (stream->eof && !data->is_pipe) {
-			return 0;
-		}
 		ret = read(data->fd, buf, count);
 
 		if (ret == (size_t)-1 && errno == EINTR) {
